wordpress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      volumes:
        - name: wordpress-volume
          persistentVolumeClaim:
            claimName: wordpress-claim
      containers:
        - name: wordpress
          image: wordpress:5.3.2-php7.2-fpm
          ports:
            - containerPort: 9000
          volumeMounts:
            - mountPath: "/var/www/html"
              name: wordpress-volume
