wordpress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordpress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "FCGI"
    nginx.ingress.kubernetes.io/fastcgi-index: index.php
    nginx.ingress.kubernetes.io/fastcgi-params-configmap: "ingress-config"
    nginx.org/server-snippets: |
      location ~ \.php$ {
        include /etc/nginx/fastcgi.conf;
      }

spec:
  tls:
    - hosts:
      - joao-wp-test.vitaes.io
      secretName: tls-secret
  rules:
    - host: joao-wp-test.vitaes.io
      http:
        paths:
        - path: /
          backend:
            serviceName: wordpress
            servicePort: 80
